fixing page height of home on mobile

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -509,8 +509,8 @@ $radius: 26vw;
 
 	header {
 		// height: 87vh;
-		height: 100vh;
-		// height: 100dvh;
+		// height: 100vh;
+		height: 100dvh;
 	}
 
 	.header__container {
